--- a/syncFusionTest/package.json
+++ b/syncFusionTest/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@syncfusion/ej2-react-calendars": "^30.1.37",
     "@syncfusion/ej2-react-grids": "^30.1.42",
     "react": "^19.1.0",
     "react-dom": "^19.1.0"
